feat: add role checking, add possibility for user to change his pass or email
